misc/endpoint/go-endpoint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-endpoint
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-endpoint
  template:
    metadata:
      labels:
        app: go-endpoint
    spec:
      containers:
      - name: go-endpoint
        image: laielvin0/go-endpoint:1.11
        ports: 
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: go-endpoint-svc
spec:
  selector:
    app: go-endpoint
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
